// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-block-list> Component basic usage 1`] = `
<bolt-block-list items="List Item 1,List Item 2,List Item 3"
                 bolt-component
>
  <ul class="c-bolt-block-list">
    <li class="c-bolt-block-list__item">
      List Item 1
    </li>
    <li class="c-bolt-block-list__item">
      List Item 2
    </li>
    <li class="c-bolt-block-list__item">
      List Item 3
    </li>
  </ul>
</bolt-block-list>
`;

exports[`<bolt-block-list> Component block list with Drupal theme attribute 1`] = `
<bolt-block-list items="List Item 1,List Item 2,List Item 3"
                 bolt-component
>
  <ul class="t-bolt-dark c-bolt-block-list">
    <li class="c-bolt-block-list__item">
      List Item 1
    </li>
    <li class="c-bolt-block-list__item">
      List Item 2
    </li>
    <li class="c-bolt-block-list__item">
      List Item 3
    </li>
  </ul>
</bolt-block-list>
`;
